# skill-system

./: .gitignore  .mcp.json.example  CLAUDE.md  LICENSE  README-zh.md  README.md  plugins.yaml  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
docs/: DEVELOPMENT.md  architecture-plan.md  architecture-v0.2-review.md  architecture-v0.2.md  openspace-architecture-insights.md  pipeline-refactor-v0.3.md  trace-test-plan.md
examples/: code-review.yaml
scripts/: bootstrap_pipeline.py
skills/: dev-diary.yaml  hello-world.yaml  pdf-to-markdown.yaml
skills/dev-diary/: SKILL.md
skills/dev-diary/scripts/: diary.py
skills/git-status/: SKILL.md
skills/hello-world/: SKILL.md
skills/hello-world/scripts/: echo.py  hello.py
skills/markdown-stats/: SKILL.md
skills/pdf-to-markdown/: SKILL.md
skills/pipeline-analyzer/: SKILL.md
skills/run-tests/: SKILL.md
src/skill_engine/: dashboard.py  server.py
src/skill_engine/engine/: criteria.py  (+4 more)
tests/: conftest.py
tests/e2e/: conftest.py  test_pipelines.py  test_server_stdio.py
tests/integration/: test_compose.py  test_executor.py  test_retry_timeout.py  test_skillstore_yaml.py  test_trace_lifecycle.py
tests/stress/: test_concurrency.py  test_edge_cases.py
tests/unit/: test_agent.py  test_analyzer.py  test_criteria.py  test_dag_executor.py  test_decomposer.py  test_models.py  test_resolver.py  test_retriever.py  test_skill_metadata.py  test_skill_store.py  test_tool_registry.py  test_trace_store.py  test_tracer.py  test_transcript_reader.py  test_validator.py  test_validator_pipeline.py
(+47 files in other folders)
